# C_plus_plus

./: .cproject  .gitignore  .project  CMakeLists.txt  contest9.exe.stackdump
DV_HW/: CMakeLists.txt
DV_HW/1_a_i/: 1_a_i_1.c  1_a_i_2.c  CMakeLists.txt
DV_HW/1_a_ii/: 1_a_ii.c  CMakeLists.txt
DV_HW/1_a_iii/: 1_a_iii.c  CMakeLists.txt
DV_HW/1_b_i/: 1_b_i.c  CMakeLists.txt
DV_HW/1_b_ii/: 1_b_ii.c  CMakeLists.txt  Freq_rule.opj  backup.txt  res.txt  res_freq.txt  text.txt
DV_HW/1_b_iii/: 1_b_iii.c  CMakeLists.txt  res.csv
DV_HW/1_c_i/: 1_c_i.c  1_c_i_2.c  1_c_i_3.c  CMakeLists.txt  Linked_List.h  points.csv  polygon.csv  print_polygon.ipynb
DV_HW/1_c_ii/: 1_c_ii.c  CMakeLists.txt  Stack.h  expressions.txt  print_graph.ipynb
DV_HW/1_c_iii/: 1_c_iii.c
Final_Test/: CMakeLists.txt  Final_Test-tests.cpp  class.h  main.cpp  test.txt
Lab13/: CMakeLists.txt  main.cpp
LinkedList/: .cproject  LinkedList.exe.stackdump
LinkedList/Debug/: makefile
LinkedList/src/: LinkedList.cpp  linked_list.hpp
SchrodingerEq/SchrodingerEquation/: 1000000x1000000_ds%3D0.01.html  1000000x1000000_ds=0.01.ipynb  1000000x100000_ds=0.01.ipynb  1000000x1500_vv.ipynb  E_ds.csv  (+11 more)
SchrodingerEquation/: CMakeLists.txt  Untitled.ipynb  backup  main.cpp  output10NE.csv  outputNE.csv  outputNE_withoutRef.csv
contest9/: CMakeLists.txt  Problem_B.h  Problem_E.h  Problem_G.h  Problem_H.h  graph.txt  graph_and_dijkstra.h  main.cpp  method_of_graph.h
factorial/: CMakeLists.txt  main.cpp
ready_to_test/: CMakeLists.txt  main.cpp  ready_to_test-tests.cpp  vector.h
src/: contest9.cpp
(+18 files in other folders)
